Fixed spacing for text elements which need to be added

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ color:#1652B4;
 #resources p
 {
 text-align: center;
-margin-bottom: 20px;
+margin-bottom: 5px;
 }
 
 #resources h2
